# UniRide

./: .gitignore  .ninja_deps  .ninja_log  API_DOCUMENTATION.md  AuthSys.cpp  AuthSys.h  CMakeCache.txt  CMakeLists.txt  COMPLETE_API_GUIDE.md  ChatFeature.cpp  ChatFeature.h  DatabaseManager.cpp  DatabaseManager.h  LocationGraph.cpp  LocationGraph.h  Message.h  OTPverification.cpp  OTPverification.h  Request.cpp  Request.h  RequestQueue.cpp  RequestQueue.h  Ride.cpp  Ride.h  RideSystem.cpp  RideSystem.h  UniRide_API_Guide.md  User.cpp  User.h  build.ninja  buildGraph.cpp  cmake_install.cmake  frontend_map.md  locations.csv  main.cpp  ride_request.json
frontend/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  postcss.config.cjs  tailwind.config.cjs  vite.config.ts
frontend/src/: App.tsx  ErrorBoundary.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: Navbar.tsx  NotificationBanner.tsx  RideForm.tsx  RideOfferForm.tsx  RideRequestForm.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: useRideLocations.ts
frontend/src/pages/: ChatPage.tsx  CurrentRide.tsx  Dashboard.tsx  Landing.tsx  RideHistory.tsx  RideInteractionScreen.tsx  Rides.tsx
